--- a/src/DDD-Playground/WebApi/WebApi.csproj
+++ b/src/DDD-Playground/WebApi/WebApi.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
